<resources>
    <string name="app_name">CardApp</string>
    <string name="apto_deep_link_scheme">appdeeplink</string>
    <string name="action_refresh">Refresh</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="user_data_menu_info">Info &amp; terms</string>
    <string name="toast_api_error" formatted="false">Error: %s</string>
    <string name="banner_error_title">Error</string>
    <string name="error_something_went_wrong">Something went wrong.</string>
    <string name="ellipsis">…</string>
    <string name="toolbar_next_button_label">Next</string>
    <string name="toolbar_confirm_button_label">Confirm</string>
    <string name="toolbar_get_physical_card">Get your physical card!</string>
    <string name="manage_card_activate_physical_card_top_bar_item_title">Enable physical card!</string>
    <string name="toolbar_account_settings_title">Account settings</string>
    <string name="toolbar_stats_chart_title">Stats chart</string>
    <string name="select_balance_store_oauth_confirm_refresh_title">Updated your personal details?</string>
    <string name="personal_info_label">Personal Info</string>
    <string name="personal_info_first_name_hint">First name</string>
    <string name="personal_info_first_name_error">Please enter your first name.</string>
    <string name="personal_info_last_name_hint">Last name</string>
    <string name="personal_info_last_name_error">Please enter your last name.</string>
    <string name="personal_info_email_hint">Email</string>
    <string name="personal_info_email_error">Please enter a valid email address.</string>
    <string name="personal_info_email_not_available">I don\'t have an email</string>
    <string name="auth_input_phone_title">Get started</string>
    <string name="auth_input_phone_explanation">To ensure the security of your account, please enter your phone number below and we will send you a unique code to authenticate you.</string>
    <string name="auth_input_phone_hint">Phone number</string>
    <string name="auth_input_phone_call_to_action">Continue</string>
    <string name="auth_input_phone_error_can_not_send_sms">Looks like we can\'t send you a code, as you\'ve already requested to stop receiving SMS messages from us. Chat to our team for more help.</string>
    <string name="auth_input_phone_error_invalid_phone_number">Looks like the number you\'ve entered isn\'t a valid mobile number. Check it\'s been entered correctly and isn\'t a landline number.</string>
    <string name="auth_input_phone_error_unreachable_phone_number">Looks like we can\'t send you your code as the number you\'ve provided isn\'t currently reachable by SMS. Please try again.</string>
    <string name="auth_input_phone_error_invalid_called_phone_number">Looks like the phone number you\'ve entered isn\'t valid. Please try again.</string>
    <string name="auth_input_email_title">Get Started</string>
    <string name="auth_input_email_explanation">Enter your email address</string>
    <string name="auth_input_email_hint">emailaddress@example.com</string>
    <string name="auth_input_email_footer">emailaddress@example.com</string>
    <string name="auth_verify_phone_title">Verify your account</string>
    <string name="auth_verify_phone_explanation">Enter the six-digit verification code below. It may take up to a few minutes.</string>
    <string name="auth_verify_phone_footer">Didn’t receive a code?</string>
    <string name="auth_verify_phone_resend_button_title">Click here to send another code</string>
    <string name="auth_verify_phone_error_wrong_code_title">Error</string>
    <string name="auth_verify_phone_error_wrong_code_message">Looks like that code isn\'t valid. Please double-check the one we sent to you, or tap here to request a new one.</string>
    <string name="auth_verify_phone_resent_wait_text">Resend your code if it doesn\'t arrive in &lt;&lt;WAIT_TIME&gt;&gt;</string>
    <string name="auth_verify_phone_expired_pin_text">Code expired, too many attempts.\nPlease request a new code via SMS</string>
    <string name="email_title">Account details</string>
    <string name="email_error">Invalid email</string>
    <string name="email_label">Enter your email address</string>
    <string name="email_hint">emailaddress@example.com</string>
    <string name="auth_verify_birthdate_title">Second step credential</string>
    <string name="auth_verify_birthdate_explanation">Enter your birthdate below to verify your account.</string>
    <string name="auth_verify_birthdate_call_to_action_title">Continue</string>
    <string name="auth_verify_birthdate_error_wrong_code_title">Error</string>
    <string name="auth_verify_birthdate_error_wrong_code_message">This birth date is incorrect</string>
    <string name="birthdate_hint_dd">DD</string>
    <string name="birthdate_hint_mm">MM</string>
    <string name="birthdate_hint_yyyy">YYYY</string>
    <string name="phone_verification_label">Verify phone number</string>
    <string name="auth_verify_phone_resent_message">A new code has been sent to your phone</string>
    <string name="phone_verification_code_hint">Enter the code that was sent to your phone</string>
    <string name="verification_code_hint">Enter the code that was sent to</string>
    <string name="verification_button_resend"><u>Re-send code</u></string>
    <string name="auth_verify_email_title">Verify email address</string>
    <string name="auth_verify_email_explanation">Enter the code that was sent to</string>
    <string name="auth_verify_email_explanation_empty_data">Enter the code that was sent to your email address</string>
    <string name="auth_verify_email_resend_button_title">Re-send code</string>
    <string name="auth_verify_email_footer">Didn’t receive a code?</string>
    <string name="auth_verify_email_expired_pin_text">Code expired, too many attempts.\nPlease request a new code via your email address</string>
    <string name="auth_verify_email_resent_message">A new code has been sent to your email address</string>
    <string name="auth_verify_email_error_wrong_code_title">Error</string>
    <string name="auth_verify_email_error_wrong_code_message">Looks like that code isn\'t valid. Please double-check the one we sent to you, or tap here to request a new one.</string>
    <string name="auth_verify_email_resent_wait_text">Resend your code if it doesn\'t arrive in &lt;&lt;WAIT_TIME&gt;&gt;</string>
    <string name="email_verification_title">Security check</string>
    <string name="email_verification_code_hint">Enter the code that was sent to your email</string>
    <string name="email_verification_code_hint_theme_2">Enter the 6-digit code we\'ve just sent to your email</string>
    <string name="email_verification_resent">A new code has been sent to your email</string>
    <string name="select_card_product_select_country_title">Country of residence 🏠</string>
    <string name="select_card_product_select_country_explanation">Select your country of tax residence.</string>
    <string name="select_card_product_select_country_call_to_action">Select country</string>
    <string name="manage_card_activate_physical_card_code_title">Enable your physical card</string>
    <string name="manage_card_activate_physical_card_code_message">Enable your card by entering the activation code that came attached with your physical card.</string>
    <string name="manage_card_get_pin_nue_title">Congratulations!</string>
    <string name="manage_card_get_pin_nue_explanation">Your physical Apto Card has been enabled. We\'ve set a random PIN code for your card.</string>
    <string name="manage_card_get_pin_nue_call_to_action_title">Get my PIN</string>
    <string name="manage_card_get_pin_nue_footer">PIN is obtained via phone call and charge may be applied by your mobile network operator.</string>
    <string name="transaction_details_adjustment_capture_text">Capture</string>
    <string name="transaction_details_adjustment_refund_text">Refund</string>
    <string name="transaction_details_adjustment_hold_text">Hold</string>
    <string name="transaction_details_adjustment_release_text">Release</string>
    <string name="transaction_details_adjustment_other_text">Other</string>
    <string name="transaction_details_details_device_type_ecommerce">eCommerce</string>
    <string name="transaction_details_details_device_type_pos">POS</string>
    <string name="transaction_details_details_device_type_international">INT.</string>
    <string name="transaction_details_details_device_type_emv">EMV</string>
    <string name="transaction_details_details_transaction_type_atm_withdrawal">ATM Withdrawal</string>
    <string name="transaction_details_details_transaction_type_pending">Pending</string>
    <string name="transaction_details_details_transaction_type_reversal">Reversal</string>
    <string name="transaction_details_details_transaction_type_purchase">Purchase</string>
    <string name="transaction_details_details_transaction_type_pin_purchase">PIN Purchase</string>
    <string name="transaction_details_details_transaction_type_refund">Refund</string>
    <string name="transaction_details_details_transaction_type_decline">Decline</string>
    <string name="transaction_details_details_transaction_type_balance_inquiry">Balance Inquiry</string>
    <string name="transaction_details_details_transaction_type_credit">Credit</string>
    <string name="transaction_details_details_transaction_type_other">Other</string>
    <string name="transaction_details_details_transaction_class_atm_withdrawal">ATM Withdrawal</string>
    <string name="transaction_details_details_transaction_class_authorised">Authorised</string>
    <string name="transaction_details_details_transaction_class_pending">Pending</string>
    <string name="transaction_details_details_transaction_class_declined">Declined</string>
    <string name="transaction_details_details_transaction_class_reversed">Reversed</string>
    <string name="transaction_details_basic_info_declined_transaction_banner_title">Declined transaction</string>
    <string name="transaction_details_details_decline_default">This transaction was declined. Please get in contact with our team if you need assistance.</string>
    <string name="transaction_details_details_decline_nsf">Insufficient funds</string>
    <string name="transaction_details_details_decline_bad_pin">Wrong PIN</string>
    <string name="transaction_details_details_decline_06">Error</string>
    <string name="transaction_details_details_decline_42">International transaction not allowed</string>
    <string name="transaction_details_details_decline_70">Invalid transaction. Contact customer support</string>
    <string name="transaction_details_details_decline_60">Below withdrawal amount limit</string>
    <string name="transaction_details_details_decline_61">Exceeds withdrawal amount limit</string>
    <string name="transaction_details_details_decline_65">Exceeds withdrawal frequency limit</string>
    <string name="transaction_details_details_decline_75">Allowed number of PIN tries exceeded</string>
    <string name="birthday_collector_id_document_title">Verify your identity</string>
    <string name="birthday_collector_id_document_country_label">Issued By</string>
    <string name="birthday_collector_id_document_type_label">ID Type</string>
    <string name="collect_user_data_address_title">Enter your home address</string>
    <string name="collect_user_data_address_address_placeholder">Address</string>
    <string name="collect_user_data_address_apt_unit_placeholder">Apartment number (optional)</string>
    <string name="load_funds_add_card_card_number_placeholder">Enter debit card number</string>
    <string name="load_funds_add_card_date_placeholder">MM/YY</string>
    <string name="load_funds_add_card_cvv_placeholder">CVV</string>
    <string name="load_funds_add_card_zip_placeholder">ZIP code</string>
</resources>