<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/et_birthdate_input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="5"
    tools:showIn="@layout/fragment_birthdate_verification">

    <EditText
        android:id="@+id/et_birthday_month"
        style="@style/ThemeTwo.BirthDate.Input"
        android:layout_weight="1.75"
        android:hint="@string/birthdate_hint_mm"/>

    <include
        android:id="@+id/separator_left"
        layout="@layout/include_vertical_separator" />

    <EditText
        android:id="@+id/et_birthday_day"
        style="@style/ThemeTwo.BirthDate.Input"
        android:layout_weight="1.75"
        android:hint="@string/birthdate_hint_dd" />

    <include
        android:id="@+id/separator_right"
        layout="@layout/include_vertical_separator" />

    <EditText
        android:id="@+id/et_birthday_year"
        style="@style/ThemeTwo.BirthDate.Year"
        android:layout_weight="1.5"
        android:hint="@string/birthdate_hint_yyyy"/>

</LinearLayout>
